# webview_haskell

./: .gitmodules  CHANGELOG.md  webview.cabal
.github/workflows/: ci.yml
examples/: LICENSE  cabal.project  webview-examples.cabal
examples/app/: Basic.hs
src/Graphics/: WebView.hs
test/: Test.hs
