cabal-version:      3.0
name:               webview
version:            0.0.0.0
synopsis:           Haskell bindings for webview

homepage:           https://github.com/shun-shobon/webview_haskell#readme

license:            MIT
license-file:       LICENSE
author:             Shuntaro Nishizawa
maintainer:         me@shun.technology

category:           Graphics
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Graphics.WebView
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite webview-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Test.hs
    build-depends:    base ^>=4.14.3.0
