cabal-version: 3.0
name:          webview-examples
version:       0.0.0.0
synopsis:      Examples for webview
homepage:      https://github.com/shun-shobon/webview_haskell#readme
license:       MIT
license-file:  LICENSE
author:        Shuntaro Nishizawa
maintainer:    me@shun.technology

executable basic
  main-is:          Basic.hs
  build-depends:
    , base     ^>=4.14.3.0
    , webview

  hs-source-dirs:   app
  default-language: Haskell2010
