cabal-version: 3.0
name:          webview-examples
version:       0.0.0.0
license:       MIT
license-file:  LICENSE
maintainer:    me@shun.technology
author:        Shuntaro Nishizawa
homepage:      https://github.com/shun-shobon/webview_haskell#readme
synopsis:      Examples for webview

executable basic
  main-is:          Basic.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  build-depends:
    , base     ^>=4.14.3.0
    , mtl      ^>=2.2.2
    , text     ^>=1.2
    , webview
